--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "root",
-  "private": true,
-  "devDependencies": {
-    "lerna": "^3.4.3"
-  }
+    "name": "root",
+    "private": true,
+    "scripts": {
+        "start": "lerna run start --parallel --stream"
+    },
+    "devDependencies": {
+        "lerna": "^3.4.3"
+    }
 }
