--- a/packages/todo/package.json
+++ b/packages/todo/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "get-arguments-lib": "^1.0.1"
+    "get-arguments-lib": "^1.0.1",
+    "nanoid": "^2.1.3"
   }
 }
