--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "shell",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "microfronts": "^0.1.1"
-  }
+    "name": "@mf-demo/shell",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "http-server -p 1337",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "microfronts": "^0.1.1"
+    },
+    "devDependencies": {
+        "http-server": "^0.11.1"
+    }
 }
